tests/baselines/reference/parserES5ForOfStatement21.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts (1 errors) ====
    for (var of of) { }
            
!!! error TS1123: Variable declaration list cannot be empty.